@@ -1,3 +1,14 @@
+2009-04-08  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/ChartTransferable.java : New file,
+    * source/org/jfree/chart/ChartPanel.java
+    (COPY_COMMAND): New field,
+    ChartPanel(JFreeChart, int, int, int, int, int, int, boolean, boolean,
+    boolean, boolean, boolean, boolean, boolean)): New constructor,
+    (actionPerformed): Check for copy action,
+    (doCopy): Tranfer chart to clipboard,
+    (createPopupMenu): New method.
+
 2009-04-01  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/annotation/XYTextAnnotation.java
